# VoxelMaker

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  STATUS.md  TODO.md  build.sh  main.cpp
cmake/: Dependencies.cmake
docs/: ARCHITECTURE.md  DEVELOPMENT.md
include/core/: Voxel.hpp  VoxelGrid.hpp  VoxelObject.hpp
include/graphics/: Camera.hpp  Mesh.hpp  Renderer.hpp  Shader.hpp
include/tools/: BrushTool.hpp  SelectionTool.hpp  TransformTool.hpp
include/ui/: Input.hpp  UI.hpp  Window.hpp
include/utils/: FileUtils.hpp  Logger.hpp  MathUtils.hpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  Voxel.cpp  VoxelGrid.cpp  VoxelObject.cpp
src/graphics/: CMakeLists.txt  Camera.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp
src/tools/: BrushTool.cpp  CMakeLists.txt  SelectionTool.cpp  TransformTool.cpp
src/ui/: CMakeLists.txt  Input.cpp  UI.cpp  Window.cpp
src/utils/: CMakeLists.txt  FileUtils.cpp  Logger.cpp  MathUtils.cpp
